libsuperiormysqlpp (0.6.0) UNRELEASED; urgency=medium

  * feat: use converter struct instead of converter function
  * feat: Support non-default-constructible types with RowStreamAdapter

 -- Jan Kriho <jan.kriho@firma.seznam.cz>  Fri, 27 Sep 2019 12:57:13 +0200

libsuperiormysqlpp (0.5.2) unstable; urgency=medium

  [ Peter Opatril ]
  * fix: silence expected connection errors in tests

  [ Michal Merc ]
  * feat: ignore timestamp signedness

 -- Peter Opatril <petr.opatril@firma.seznam.cz>  Thu, 19 Sep 2019 14:18:42 +0200

libsuperiormysqlpp (0.5.1) unstable; urgency=medium

  [ Radek Smejdir ]
  * chore: Update bandit submodule to current HEAD

  [ Adam Stepan ]
  * chore: Add support for debian buster

 -- Radek Smejdir <radek.smejdir@firma.seznam.cz>  Wed, 24 Jul 2019 14:15:56 +0200

libsuperiormysqlpp (0.5.0) unstable; urgency=medium

  [ Peter Opatril ]
  * refactor: Logging system (DRY)
  * feat: Default logger logs errors

  [ Michal Merc ]
  * feat: Implement psQuery/psParamQuery/psResultQuery convenience functions
  * refactor: Change order of arguments for psQuery/psParamQuery/psResultQuery functions before release

 -- Peter Opatril <petr.opatril@firma.seznam.cz>  Thu, 20 Jun 2019 12:33:09 +0000

libsuperiormysqlpp (0.4.0) unstable; urgency=medium

  !!! ---- BREAKING API CHANGE ---- !!!

  [ Michal Merc ]
  * refactor: Remove szn-debian-wheezy support
  * Extend psReadValues exceptions
  * feat: Detect lost connection when using query

  [ Radek Smejdir ]
  * refactor: typo DefaultLogger::isDestoyed -> DefaultLogger::isDestroyed;
    old method is deprecated

  [ Peter Opatril ]
  * fix: base type of BadNullableAccess
  * refactor: useless const_cast
  * refactor: unused using declarations
  * refactor: redundant cyclic include dependency

 -- Radek Smejdir <radek.smejdir@firma.seznam.cz>  Tue, 07 May 2019 13:56:07 +0200

libsuperiormysqlpp (0.3.3) unstable; urgency=medium

  [ Radek Smejdir ]
  * Add ConnectionConfiguration

  [ Tomas Prochazka ]